--- a/app/components/pages/seo/seo.html
+++ b/app/components/pages/seo/seo.html
@@ -2810,7 +2810,7 @@
             </div>
             <div class="task-right">
                 <p class="text">Как найти мастера?</p>
-                <a href="https://vimeo.com/45830194" class="video">
+                <a href="https://vimeo.com/45830194" class="video" js-popup-video>
                     <img src="img/image2.jpg" alt="image" class="video-img">
                     <span class="video-time">00:30</span>
                     <svg class="video-play" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -2937,7 +2937,7 @@
                 <a href="#" class="btn-orange">Задать вопрос</a>
             </div>
         </section>
-        <section class="seo-sixth seo-sixth_visible" id="seo-sixth">
+        <section class="seo-sixth seo-sixth_visible" id="animate-text">
             <div class="seo-col">
                 <h2 class="title-18">Нужна другая <a href="#" class="blue"> услуга?</a></h2>
                 <form class="seo-form-search">
