--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -22,10 +22,23 @@ $blue: #4880FF
   font-size: 14px
   line-height: 19px
 @mixin container
-  background: #ffffff
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1)
+  background: $lv7
+  box-shadow: $shadow-active
   border-radius: 5px
-
-
+@mixin before
+  content: ''
+  position: absolute
+  left: 0
+  top: 0
+@mixin gradient
+  content: ''
+  position: absolute
+  left: 0
+  bottom: 0
+  width: 100%
+  height: 71px
+  background: linear-gradient(0deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%)
+  z-index: 2
+  pointer-events: none
 
 
